añado coche en banner

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Examen UF2</h1>
     <h2>Exercici 1</h2>
-    <div id="ex1"></div>
+    <div id="ex1"><img src="originals/cocheEditado.png"></div>
     <h2>Exercici 2</h2>
     <div id="ex2">Implementeu aquí l'exercici 2</div>
 </body>
